fix: 마감시간 넘기는 장소는 하루 중 알맞은 자리에 자동 삽입/재배치
일정에 새 장소를 추가할 때 하루 맨 끝에 붙이면 마감시간을 넘겨 무조건
차단되던 것을, 마감을 넘기지 않는 자리 중 가장 늦은 위치를 찾아 그
자리에 끼워 넣도록 변경(ItineraryService). 동선 재계산(TSP)은 순수
거리로만 순서를 정해 이렇게 끼워 넣은 자리를 다시 흐트러뜨릴 수 있어,
재계산 결과에서도 마감을 넘기는 장소를 감지해 더 이른 자리로 재배치하는
복구 로직을 추가(RouteRecalculationService) - 다른 장소의 마감을 새로
어기게 되는 자리는 채택하지 않는다.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>